[package]
name = "pano"
version = "0.1.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1"
env_logger = "0.10"
log = "0.4"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wgpu = { version = "0.17", features = ["webgl"]}
winit = "0.28"
web-sys = { version = "0.3", features = [
    "Document",
    "Element",
    "Window",
    # TODO: Enable WebGPU support!
    #"GpuCanvasContext",
    #"Gpu",
]}

# TODO: These should only be in the debug build.
console_error_panic_hook = "0.1"
console_log = "1.0"
